@@ -1,13 +1,18 @@
-http://foo.com/path/to/index.html#help
+http://foo.com/path/to/index.html?orig
 http://foo.com/path/to/
 http://foo.com/path/to/bar
 http://foo.com/path/to/bar#baz
 http://foo.com/path/to/bar?baz
-http://foo.com/path/to/index.html#baz
+http://foo.com/path/to/bar?baz#baz2
+http://foo.com/path/to/index.html?orig#baz
 http://foo.com/path/to/index.html?baz
+http://foo.com/path/to/index.html?baz#baz2
 http://foo.com/path/up.a.notch.html#wow
 http://foo.com/path/up.a.notch.html?wow
+http://foo.com/path/up.a.notch.html?wow#wow2
 http://foo.com/root.cgi#OK
 http://foo.com/root.cgi?OK
-https://elsewhere.com/#deep
-https://elsewhere.com/?deep
+http://foo.com/root.cgi?OK#OK2
+http://elsewhere.com/#deep
+http://elsewhere.com/?deep
+http://elsewhere.com/?deep#deep2
