@@ -3,11 +3,16 @@
 bar
 bar#baz
 bar?baz
+bar?baz#baz2
 #baz
 ?baz
+?baz#baz2
 ../up.a.notch.html#wow
 ../up.a.notch.html?wow
+../up.a.notch.html?wow#wow2
 /root.cgi#OK
 /root.cgi?OK
-https://elsewhere.com/#deep
-https://elsewhere.com/?deep
+/root.cgi?OK#OK2
+http://elsewhere.com/#deep
+http://elsewhere.com/?deep
+http://elsewhere.com/?deep#deep2
